# solid-tauri-xs

./: .gitignore  README.md  index.html  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
