[package]
name = "solid-xs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solid_xs"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# xs = { git = "https://github.com/cablehead/xs.git", branch = "main" }
xs = { path = "/Users/andy/s/03BKRZUEAK5U4GIA2V7GTWPLM/xs" }

tokio = { version = "1.40.0", features = ["rt", "time"] }
scru128 = { version = "3.1.0", features = ["serde"] }


